--- a/data/data_visualization.ipynb
+++ b/data/data_visualization.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Data visualization.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -604,6 +605,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nodtem66/Scaffolder/blob/master/data/data_visualization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "IvmI8Y8Lrqod",
         "colab_type": "text"
       },
@@ -641,7 +652,7 @@
       "metadata": {
         "id": "eT2ttFCBrpQT",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
@@ -653,7 +664,7 @@
         "! curl -L https://data.mendeley.com/public-files/datasets/sbxr7xxvnd/files/3a586aee-6d38-48b3-9d75-f4b6eeb42b6d/file_downloaded -o freq_iso_level.xlsx\n",
         "! pip install -U plotly"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,7 +693,7 @@
       "metadata": {
         "id": "zJund9ES6lh7",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
@@ -769,7 +780,7 @@
         "def r(x, d=1, eps=0):\n",
         "    return np.reciprocal(x + eps) if d is 1 else np.power(np.reciprocal(x + eps), d)"
       ],
-      "execution_count": 258,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -777,7 +788,7 @@
       "metadata": {
         "id": "GuEY8Fc27jem",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
@@ -803,7 +814,7 @@
         "    if v and k[0] not in ['tubular_g_c', 'tubular_g_ab']:\n",
         "        data.drop(data.query(f'Surface == \\'{k[0]}\\' and t == {k[1]}').index, inplace=True)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -831,7 +842,7 @@
         "fig.update_xaxes(side=\"top\")\n",
         "fig.show()"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -899,6 +910,7 @@
       "metadata": {
         "id": "1S1ghtxQy9xA",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 849,
@@ -912,7 +924,6 @@
             "a274d2a00ae6489e85dbebad783d38fd"
           ]
         },
-        "cellView": "both",
         "outputId": "aba76f1f-83c0-43b2-f713-b04bcdd35683"
       },
       "source": [
@@ -986,7 +997,7 @@
         "  )\n",
         "  fig.show()"
       ],
-      "execution_count": 289,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1011,6 +1022,7 @@
       "metadata": {
         "id": "_E5vi_Rews9U",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 115,
@@ -1027,7 +1039,6 @@
             "15d0148682964ed4aef254abf17beb10"
           ]
         },
-        "cellView": "form",
         "outputId": "b07fe1a8-10a2-492e-8d7d-b0ca6f4f1c1d"
       },
       "source": [
@@ -1044,7 +1055,7 @@
         "#@markdown PS. `r(x) := np.reciprocal(x)` and `p(x, d=2) := np.power(x,d)`\n",
         "interact(regress, data=fixed(data), surface=data.Surface.unique(), formula='')"
       ],
-      "execution_count": 260,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
